Fix small layout bug in article card

--- a/labs/jp/1/css/owl.carousel.css
+++ b/labs/jp/1/css/owl.carousel.css
@@ -227,3 +227,6 @@
 /* Commit 59 by aidar2512 (2025-10-05 23:43:17): Fix small layout bug in article card */
 @media (min-width:1px){/* noop rule */}
 
+/* Commit 59 by aidar2512 (2025-10-05 23:52:03): Fix small layout bug in article card */
+@media (min-width:1px){/* noop rule */}
+
